<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginBottom="15dp"
                    android:text="@string/stay_connected"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_person"
                    android:hint="@string/name"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/phone"
                    android:hint="@string/phone"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/email"
                    android:hint="@string/email"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/address"
                    android:hint="@string/address"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:startIconDrawable="@drawable/bloodtype"
                    android:hint="@string/blood_group"
                    >
                    <AutoCompleteTextView
                        android:id="@+id/blood_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="none"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/calendar"
                    android:hint="@string/dob"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:background="@color/white"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:layout_weight="1"
                        android:layout_marginLeft="3dp"
                        android:textSize="17sp"
                        />
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        />
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        />
                </RadioGroup>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/lock"
                    app:counterMaxLength="15"
                    android:hint="@string/password"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/setpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:counterMaxLength="15"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/lock"
                    android:hint="@string/confirm_password"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/red"
                    android:background="@drawable/btn_primary"
                    />
                <TextView
                    android:id="@+id/already"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Already have an account? Login"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    />

            </LinearLayout>



        </ScrollView>

    </LinearLayout>



    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_wave__3_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>